[package]
name = "pi_wasm"
version = "0.1.0"
description = "A toy project with Rust and WASM to approximate the value of pi"
license = "MIT"
repository = "https://github.com/OlgaLezhnina/pi_approximation"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
getrandom = { version = "0.4.3", features = ["wasm_js"] }
js-sys = "0.3.102"
rand = "0.10.1"
rand_distr = "0.6.0"
wasm-bindgen = "0.2.125"

